  contain a constant even if the model to be tested does not
- Fix bug: wrong starting date being sent to x12a/x13as for
  monthly data starting in October
- Fix bug: score calculation for random-effects probit was 
  incorrect
- Fix bug: incorrect estimates when the --robust option was
  used with the "wls" command
- Fix bug 181
- Internals: add support for multiple, independent PRNGs
- win32 build: update gmp to 5.1.3, mpfr to 3.1.2
	
2013-11-21 version 1.9.14
- Use daily dates when plotting daily/weekly data and there
  are not too many observations
- Line-numbering in the script editor: make this a preference
  which is remembered
- mols() function: parallelize some of the work for builds
  with openmp enabled
- GUI: provide a menu item for adding a panel unit index
- GUI: "/File/Save data as" now switches the current dataset
  to the name of the saved one
- Fix bug: the build of gnuplot included in the gretl-quartz
  package (for Mac) did not work properly in stand-alone mode
- Fix bug: the importer for SAS "xport" files over-counted the
  number of observations, leading to out-of-memory failure on 
  very big datasets
- Fix bug: the --show-plot option to the "freq" command was not
  being respected
- Fix bug: failure parsing value-labels for "int" arguments in
  building function packages
- Fix bug: "foreach" loop failing when given a single term that
  is not a named list
- Fix bug: panel Hausman test producing bad output under some
  conditions

2013-10-24 version 1.9.13
- Add Bulgarian, Catalan and Galician translations
- Add new functions: psum(), prodc(), prodr(), toupper(),
  getline(), isodate(), regsub(), atof()
- "adf" command: add option to optimize the lag order using
  the procedure recommended by Ng and Perron (2001), and
  make their modified AIC method the default
- "outfile" command: add --quiet option
- "var" command: add syntax to select specific lags
- "boxplot" command: add facility to specify literal gnuplot