@@ -38,9 +38,11 @@
 #include "gretl_xml.h"
 #include "gretl_string_table.h"
 #include "dbread.h"
-#include "gretl_www.h"
 #include "uservar.h"
 #include "csvdata.h"
+#ifdef USE_CURL
+# include "gretl_www.h"
+#endif
 
 #ifdef WIN32
 # include <windows.h>
@@ -700,10 +702,15 @@ static int cli_try_http (const char *s, char *fname, int *http)
     s += strspn(s, " ");
 
     if (strncmp(s, "http://", 7) == 0) {
+#ifdef USE_CURL
 	err = retrieve_public_file(s, fname);
 	if (!err) {
 	    *http = 1;
-	} 
+	}
+#else
+	gretl_errmsg_set(_("Internet access not supported"));
+	err = E_DATA;
+#endif
     }
 
     return err;
